Fix page background not wrapping all the content

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 html{
     min-height:100%;/* make sure it is at least as tall as the viewport */
+    position:relative;
+
 }
 body{
     font-size: 16px;
@@ -11,6 +13,7 @@ body{
     margin: 0px;
     padding: 0px 40px;
     text-align: center;
+    min-height: 100%;
 }
 
 ol,
@@ -43,11 +46,14 @@ a{
     text-decoration: none;
 
 }
+img{
+    height: 100%;
+    width: 100%;
+}
 .page{
     background-color: rgb(223, 5, 63);
     height: 100%;
     width: 50%;
     margin: 0px auto;
     padding: 10px 80px;
-
 }
